# RNA-Stem-Loop-Visualizer

./: .gitignore  CMakeLists.txt  Doxyfile  Examples.txt  README  README.md  RunCYK  RunPDA  RunTuring  Times.txt  doxygen.doxy  index.html  params.json  ui_mainwindow.h
Debug/: sources.mk
Debug/src/: subdir.mk
Debug/src/TinyXML/: subdir.mk
Debug/src/UI/: subdir.mk
Portfolio/: Code.tgz  Documentation.tgz
Portfolio/Workshop/Voorbeeldtests/: CYK_SampleInput0.xml  CYK_SampleInput1.xml  LLParserInput.txt
Presentation/assets/: header.json  header.jsonp
Presentation/assets/0E9448A9-882D-4CC9-8F82-4054D1CF2C5D/: 0E9448A9-882D-4CC9-8F82-4054D1CF2C5D.json  0E9448A9-882D-4CC9-8F82-4054D1CF2C5D.jsonp
Presentation/assets/187C53D8-A1F3-40DB-8397-C7AF7B895AD2/: 187C53D8-A1F3-40DB-8397-C7AF7B895AD2.json  187C53D8-A1F3-40DB-8397-C7AF7B895AD2.jsonp
Presentation/assets/1AD54C57-D18F-48AB-A894-EB23D0A6481E/: 1AD54C57-D18F-48AB-A894-EB23D0A6481E.json  1AD54C57-D18F-48AB-A894-EB23D0A6481E.jsonp
Presentation/assets/1B2CD8F2-08E7-4141-BD30-DA1E7D0BCA4C/: 1B2CD8F2-08E7-4141-BD30-DA1E7D0BCA4C.json  1B2CD8F2-08E7-4141-BD30-DA1E7D0BCA4C.jsonp
Presentation/assets/3B445655-58E2-4713-A78D-0D67BEF88038/: 3B445655-58E2-4713-A78D-0D67BEF88038.json  3B445655-58E2-4713-A78D-0D67BEF88038.jsonp
Presentation/assets/4393434A-12D0-46E9-BC22-D655541993C5/: 4393434A-12D0-46E9-BC22-D655541993C5.json  4393434A-12D0-46E9-BC22-D655541993C5.jsonp
Presentation/assets/4A60460D-1B67-4BFA-B3CB-4DED5E03CAFA/: 4A60460D-1B67-4BFA-B3CB-4DED5E03CAFA.json  4A60460D-1B67-4BFA-B3CB-4DED5E03CAFA.jsonp
Presentation/assets/50265D80-6D27-4854-8F70-7F24764E3E37/: 50265D80-6D27-4854-8F70-7F24764E3E37.json  (+1 more)
data/: LLP1exp.txt  LLP2exp.txt  LLP2in.txt  LLP3exp.txt  LLP3in.txt  LLP4exp.txt  LLP4in.txt  LLP5exp.txt  LLP5in.txt  LLP6exp.txt  LLP6in.txt  LLP7exp.txt  LLP7in.txt  LLP8exp.txt  LLP8in.txt  LLP_RNAexp.txt  LLP_RNAin.txt  PDA.xml  PDA1.xml  PDAInput1.xml  PDARNA1.xml  TM2.xml  TMRNA1.xml  TMinvalid1.xml  TMinvalid10.xml  TMinvalid11.xml  TMinvalid12.xml  TMinvalid13.xml  TMinvalid14.xml  TMinvalid15.xml  TMinvalid16.xml  TMinvalid17.xml  TMinvalid2.xml  TMinvalid3.xml  TMinvalid4.xml  TMinvalid5.xml  TMinvalid6.xml  TMinvalid7.xml  TMinvalid8.xml  TMinvalid9.xml
docs/: doxyfile  doxyfile.in  footer.htm  header.htm
docs/html/: _c_f_g_8h_source.html  _c_n_f_8h_source.html  _catch_8h_source.html  _l_l_parser_8h_source.html  _l_l_parser_input_output_8h_source.html  _p_d_a_8h_source.html  _r_n_a_string_8h_source.html  _r_n_a_visualizer_8h_source.html  _turing_8h_source.html  annotated.html  class_c_f_g-members.html  class_c_f_g.html  class_c_n_f-members.html  class_c_n_f.html  class_catch_1_1_assertion_result-members.html  class_catch_1_1_assertion_result.html  class_catch_1_1_between_generator-members.html  class_catch_1_1_between_generator.html  class_catch_1_1_composite_generator-members.html  class_catch_1_1_composite_generator.html  class_catch_1_1_config-members.html  class_catch_1_1_config.html  class_catch_1_1_detail_1_1_approx-members.html  class_catch_1_1_detail_1_1_approx.html  class_catch_1_1_exception_translator_registrar-members.html  class_catch_1_1_exception_translator_registrar.html  class_catch_1_1_expression_decomposer-members.html  class_catch_1_1_expression_decomposer.html  class_catch_1_1_expression_lhs-members.html  class_catch_1_1_expression_lhs.html  class_catch_1_1_expression_result_builder-members.html  class_catch_1_1_expression_result_builder.html  class_catch_1_1_internal_1_1_evaluator.html  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_all_of-members.html  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_all_of.html  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_any_of-members.html  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_any_of.html  class_catch_1_1_method_test_case-members.html  class_catch_1_1_method_test_case.html  class_catch_1_1_non_copyable-members.html  (+250 more)
docs/latex/: annotated.tex  class_c_f_g.eps  class_c_f_g.tex  class_c_n_f.eps  class_c_n_f.tex  class_catch_1_1_assertion_result.tex  class_catch_1_1_between_generator.tex  class_catch_1_1_composite_generator.tex  class_catch_1_1_config.eps  class_catch_1_1_config.tex  class_catch_1_1_detail_1_1_approx.tex  class_catch_1_1_exception_translator_registrar.tex  class_catch_1_1_expression_decomposer.tex  class_catch_1_1_expression_lhs.tex  class_catch_1_1_expression_result_builder.tex  class_catch_1_1_internal_1_1_evaluator.tex  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_all_of.tex  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_any_of.tex  class_catch_1_1_method_test_case.tex  class_catch_1_1_non_copyable.eps  class_catch_1_1_non_copyable.tex  class_catch_1_1_not_implemented_exception.tex  class_catch_1_1_option.eps  class_catch_1_1_option.tex  class_catch_1_1_ptr.tex  class_catch_1_1_safe_bool.tex  class_catch_1_1_scoped_message.tex  class_catch_1_1_section.tex  class_catch_1_1_stream.tex  class_catch_1_1_stream_buf_base.eps  class_catch_1_1_stream_buf_base.tex  class_catch_1_1_stream_buf_impl.eps  class_catch_1_1_stream_buf_impl.tex  class_catch_1_1_tag.tex  class_catch_1_1_tag_expression.tex  class_catch_1_1_tag_expression_parser.eps  class_catch_1_1_tag_expression_parser.tex  class_catch_1_1_tag_extracter.eps  class_catch_1_1_tag_extracter.tex  class_catch_1_1_tag_parser.eps  (+116 more)
extern tests/: PDA2.xml
src/: CFG.cpp  CFG.h  CMakeLists.txt  CNF.cpp  CNF.h  LLParser.cpp  LLParser.h  LLParserInputOutput.cpp  LLParserInputOutput.h  PDA.cpp  PDA.h  RNAString.cpp  RNAString.h  RNAVisualizer.cpp  RNAVisualizer.h  RNAslv.cpp  TM1.xml  TM3.xml  Tests.cpp  Turing.cpp  Turing.h  runCYK.cpp  runLLParserInput.cpp  runPDAInput.cpp  runTuringInput.cpp  stackOutput.h  test_CFG.cpp  test_CNF.cpp  test_LLParser.cpp  test_PDA.cpp  test_Turing.cpp
src/UI/: algotest.cpp  algotest.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_algotest.cxx  moc_mainwindow.cxx  ui_algotest.h  ui_mainwindow.h
src/data/: PDA.xml
workshop/: CYK_SampleInput2.xml  PDAInput1.xml  README  TMInput1.xml  TuringMachineOutput.txt
(+194 files in other folders)
